增强PopupBox体验以及功能添加

--- a/src/LayuiAvaloniaPack/UI/LayUI.Avalonia/Style/Default/PopupBoxStyle.axaml
+++ b/src/LayuiAvaloniaPack/UI/LayUI.Avalonia/Style/Default/PopupBoxStyle.axaml
@@ -53,4 +53,16 @@
             </Setter.Value>
         </Setter>
     </Style>
+    <Style Selector="lay|LayPopupBox[Type=Bottom] /template/Popup#PART_Popup">
+        <Setter Property="Placement" Value="Bottom" />
+    </Style>
+    <Style Selector="lay|LayPopupBox[Type=Top] /template/Popup#PART_Popup">
+        <Setter Property="Placement" Value="Top" />
+    </Style>
+    <Style Selector="lay|LayPopupBox[Type=Left] /template/Popup#PART_Popup">
+        <Setter Property="Placement" Value="Left" />
+    </Style>
+    <Style Selector="lay|LayPopupBox[Type=Right] /template/Popup#PART_Popup">
+        <Setter Property="Placement" Value="Right" />
+    </Style>
 </Styles>
