新增分页插件控件，调整基本样式

--- a/src/LayuiAvaloniaPack/UI/LayUI.Avalonia/Themes/Default.axaml
+++ b/src/LayuiAvaloniaPack/UI/LayUI.Avalonia/Themes/Default.axaml
@@ -61,4 +61,5 @@
     <StyleInclude Source="avares://LayUI.Avalonia/Style/Default/DataGridStyle.axaml" />
     <StyleInclude Source="avares://LayUI.Avalonia/Style/Default/TreeViewStyle.axaml" />
     <StyleInclude Source="avares://LayUI.Avalonia/Style/Default/TreeViewItemStyle.axaml" />
+	<StyleInclude Source="avares://LayUI.Avalonia/Style/Default/PaginationStyle.axaml" />
 </Styles>
