--- a/src/LayuiAvaloniaPack/Layui.Main/Views/DataGridPage.axaml
+++ b/src/LayuiAvaloniaPack/Layui.Main/Views/DataGridPage.axaml
@@ -11,75 +11,82 @@
     d:DesignWidth="800"
     prism:ViewModelLocator.AutoWireViewModel="True"
     mc:Ignorable="d">
-    <lay:LayDataGrid Margin="10" ItemsSource="{Binding Items}">
-        <lay:LayDataGrid.Columns>
-            <DataGridTemplateColumn Header="序号">
-                <DataGridTemplateColumn.CellTemplate>
-                    <DataTemplate>
-                        <TextBlock Margin="6,0" VerticalAlignment="Center">
-                            <TextBlock.Text>
-                                <MultiBinding Converter="{x:Static layCv:CollectionElementIndexConverter.Instance}" StringFormat="{}{0}">
-                                    <Binding />
-                                    <Binding Path="ItemsSource" RelativeSource="{RelativeSource AncestorType=lay:LayDataGrid}" />
-                                </MultiBinding>
-                            </TextBlock.Text>
-                        </TextBlock>
-                    </DataTemplate>
-                </DataGridTemplateColumn.CellTemplate>
-            </DataGridTemplateColumn>
-            <DataGridTemplateColumn Header="复选框">
-                <DataGridTemplateColumn.CellTemplate>
-                    <DataTemplate>
-                        <lay:LayCheckBox
-                            Margin="5,0"
-                            VerticalAlignment="Center"
-                            IsChecked="{Binding IsShow, Mode=TwoWay}" />
-                    </DataTemplate>
-                </DataGridTemplateColumn.CellTemplate>
-            </DataGridTemplateColumn>
-            <DataGridTemplateColumn Header="选项">
-                <DataGridTemplateColumn.CellTemplate>
-                    <DataTemplate>
-                        <lay:LayComboBox Margin="5,0" VerticalAlignment="Center">
-                            <lay:LayComboBoxItem Content="男" />
-                            <lay:LayComboBoxItem Content="女" />
-                            <lay:LayComboBoxItem Content="未知" />
-                        </lay:LayComboBox>
-                    </DataTemplate>
-                </DataGridTemplateColumn.CellTemplate>
-            </DataGridTemplateColumn>
-            <DataGridTemplateColumn Header="开关">
-                <DataGridTemplateColumn.CellTemplate>
-                    <DataTemplate>
-                        <lay:LaySwitchButton Margin="5,0" VerticalAlignment="Center" />
-                    </DataTemplate>
-                </DataGridTemplateColumn.CellTemplate>
-            </DataGridTemplateColumn>
-            <DataGridTemplateColumn Header="进度">
-                <DataGridTemplateColumn.CellTemplate>
-                    <DataTemplate>
-                        <lay:LayProgressBar
-                            Height="20"
-                            Margin="5,0"
-                            VerticalAlignment="Center"
-                            Value="20" />
-                    </DataTemplate>
-                </DataGridTemplateColumn.CellTemplate>
-            </DataGridTemplateColumn>
-            <DataGridTextColumn Binding="{Binding Title}" Header="标题（默认）" />
-            <DataGridTemplateColumn
-                CanUserSort="true"
-                Header="标题（自定义）"
-                SortMemberPath="PriceChangePencent">
-                <DataGridTemplateColumn.CellTemplate>
-                    <DataTemplate>
-                        <TextBlock
-                            Margin="5,0"
-                            VerticalAlignment="Center"
-                            Text="{Binding Title}" />
-                    </DataTemplate>
-                </DataGridTemplateColumn.CellTemplate>
-            </DataGridTemplateColumn>
-        </lay:LayDataGrid.Columns>
-    </lay:LayDataGrid>
+    <Grid Margin="10" RowDefinitions="*,auto">
+        <lay:LayDataGrid ItemsSource="{Binding Items}">
+            <lay:LayDataGrid.Columns>
+                <DataGridTemplateColumn Header="序号">
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <TextBlock Margin="6,0" VerticalAlignment="Center">
+                                <TextBlock.Text>
+                                    <MultiBinding Converter="{x:Static layCv:CollectionElementIndexConverter.Instance}" StringFormat="{}{0}">
+                                        <Binding />
+                                        <Binding Path="ItemsSource" RelativeSource="{RelativeSource AncestorType=lay:LayDataGrid}" />
+                                    </MultiBinding>
+                                </TextBlock.Text>
+                            </TextBlock>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
+                <DataGridTemplateColumn Header="复选框">
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <lay:LayCheckBox
+                                Margin="5,0"
+                                VerticalAlignment="Center"
+                                IsChecked="{Binding IsShow, Mode=TwoWay}" />
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
+                <DataGridTemplateColumn Header="选项">
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <lay:LayComboBox Margin="5,0" VerticalAlignment="Center">
+                                <lay:LayComboBoxItem Content="男" />
+                                <lay:LayComboBoxItem Content="女" />
+                                <lay:LayComboBoxItem Content="未知" />
+                            </lay:LayComboBox>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
+                <DataGridTemplateColumn Header="开关">
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <lay:LaySwitchButton Margin="5,0" VerticalAlignment="Center" />
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
+                <DataGridTemplateColumn Header="进度">
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <lay:LayProgressBar
+                                Height="20"
+                                Margin="5,0"
+                                VerticalAlignment="Center"
+                                Value="20" />
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
+                <DataGridTextColumn Binding="{Binding Title}" Header="标题（默认）" />
+                <DataGridTemplateColumn
+                    CanUserSort="true"
+                    Header="标题（自定义）"
+                    SortMemberPath="PriceChangePencent">
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <TextBlock
+                                Margin="5,0"
+                                VerticalAlignment="Center"
+                                Text="{Binding Title}" />
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
+            </lay:LayDataGrid.Columns>
+        </lay:LayDataGrid>
+        <lay:LayPagination
+            Grid.Row="1"
+            Completed="LayPagination_Completed"
+            PageSize="10"
+            Total="{Binding Items.Count}" />
+    </Grid>
 </UserControl>
