--- a/src/LayuiAvaloniaPack/UI/LayUI.Avalonia/Themes/Default.axaml
+++ b/src/LayuiAvaloniaPack/UI/LayUI.Avalonia/Themes/Default.axaml
@@ -64,4 +64,5 @@
     <StyleInclude Source="avares://LayUI.Avalonia/Style/Default/PaginationStyle.axaml" />
     <StyleInclude Source="avares://LayUI.Avalonia/Style/Default/ScrollViewerStyle.axaml" />
     <StyleInclude Source="avares://LayUI.Avalonia/Style/Default/ScrollBarStyle.axaml" />
+    <StyleInclude Source="avares://LayUI.Avalonia/Style/Default/CircularProgressBarStyle.axaml" />
 </Styles>
