圆形进度条新增反转功能

--- a/src/LayuiAvaloniaPack/Layui.Main/Views/ProgressBarPage.axaml
+++ b/src/LayuiAvaloniaPack/Layui.Main/Views/ProgressBarPage.axaml
@@ -52,5 +52,10 @@
             Foreground="{DynamicResource Gradient}"
             Maximum="360"
             Value="{Binding #Circular.Value}" />
+        <lay:LayCircularProgressBar
+            Foreground="{DynamicResource Gradient}"
+            IsReversal="True"
+            Maximum="360"
+            Value="{Binding #Circular.Value}" />
     </StackPanel>
 </UserControl>
