--- a/src/LayuiAvaloniaPack/UI/LayUI.Avalonia/Style/Default/CircularProgressBarStyle.axaml
+++ b/src/LayuiAvaloniaPack/UI/LayUI.Avalonia/Style/Default/CircularProgressBarStyle.axaml
@@ -9,7 +9,7 @@
                 <lay:LayCircularProgressBar
                     Name="Circular"
                     Maximum="360"
-                    Value="93" />
+                    Value="270" />
                 <TextBlock
                     HorizontalAlignment="Center"
                     VerticalAlignment="Center"
@@ -57,6 +57,9 @@
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
+    </Style>
+    <Style Selector="lay|LayCircularProgressBar[IsReversal=true]/template/ Arc#PART_Arc">
+        <Setter Property="RenderTransform" Value="scaleX(-1)" />
     </Style>
     <!--  Add Styles Here  -->
 </Styles>
