--- a/src/LayuiAvaloniaPack/Layui.Main/Views/MainWindow.axaml
+++ b/src/LayuiAvaloniaPack/Layui.Main/Views/MainWindow.axaml
@@ -3,9 +3,10 @@
     xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:layExt="using:LayUI.Avalonia.Extensions"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:view="using:Layui.Main.Views"
-    Title="{Binding Title}"
+    Title="{layExt:Language {Binding Title}}"
     d:DesignHeight="450"
     d:DesignWidth="800"
     DataContext="{Binding ElementName=Main, Path=DataContext}"
